fix dropdown on small screen

--- a/css/utilities/dropdown.css
+++ b/css/utilities/dropdown.css
@@ -32,7 +32,7 @@
   border-bottom: 2px solid var(--color-text);
   transform: rotate(45deg);
   display: block;
-  margin: .5em auto 0 auto;
+  margin: .5em auto;
   position: sticky;
   bottom: 0;
   right: 0;
